force-app/main/default/objects/Aspiration__c/Aspiration__c.object-meta.xml
<CustomObject>
    <label>Aspiration</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Aspiration No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aspiration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>