force-app/main/default/objects/Aspiration__c/fields/Profile_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Profile_Discovery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Discovery</label>
    <referenceTo>Profile_Discovery__c</referenceTo>
    <relationshipLabel>Aspiration</relationshipLabel>
    <relationshipName>Aspiration</relationshipName>
    <type>Lookup</type>
</CustomField>