force-app/main/default/objects/Aspiration__c/fields/Salary_after_PG__c.field-meta.xml
<CustomField>
    <fullName>Salary_after_PG__c</fullName>
    <label>Salary after PG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>