force-app/main/default/objects/Aspiration__c/fields/Target_Career__c.field-meta.xml
<CustomField>
    <fullName>Target_Career__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Career</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Aspiration</relationshipLabel>
    <relationshipName>Aspiration</relationshipName>
    <type>Lookup</type>
</CustomField>