force-app/main/default/objects/Aspiration__c/fields/Target_Countries__c.field-meta.xml
<CustomField>
    <fullName>Target_Countries__c</fullName>
    <label>Target Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>